# response/calendar.go
@@ -6,3 +6,8 @@ type WsCalendar struct {
 	ListCalendar []model.CalendarView `json:"calendars"`
 	ListProperty []model.PropertyView `json:"properties"`
 }
+
+type Timeline struct {
+	ListCalendar []model.CalendarView `json:"calendars"`
+	ListProperty []model.PropertyView `json:"properties"`
+}
